<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Glucloser</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_glucloser_login">Log In</string>
    <string name="nav_drawer_item_foursquare_login">Foursquare Login</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_closed">Closed</string>

    <string name="title_activity_log_meal">Log A Meal</string>
    <string name="carbs_noun">Carbs</string>
    <string name="insulin_noun">Insulin</string>
    <string name="blood_sugar_before_phrase">Blood Sugar</string>
    <string name="mgdl">mg/dL</string>
    <string name="correction_noun">Correction</string>
    <string name="add_food_verb">Add Food</string>
    <string name="save_meal_verb">Save</string>

    <string name="insulin_unit_abrev_units">u</string>

    <string name="place_name_placeholder">Venue Name</string>
    <string name="numerical_placeholder">0</string>

    <string name="title_activity_log_snack">Log A Snack</string>

    <string name="snack">Snack</string>

    <string name="title_activity_log_food">Log a Food</string>
    <string name="food_list_item_name_placeholder">Food Name</string>
    <string name="food_list_item_carbs_placeholder">Carbs</string>
    <string name="name_noun">Name</string>
    <string name="title_activity_bolus_detail">Details</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="login_username_placeholder">Username</string>
    <string name="login_password_placeholder">Password</string>
    <string name="login_signin_button_text">Log In</string>
</resources>
