<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nlefler.glucloser.ui.LoginActivityFragment">

    <EditText
        android:id="@+id/login_username_value"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/login_username_placeholder" />

    <EditText
        android:id="@+id/login_password_value"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username_value"
        android:inputType="textPassword"
        android:hint="@string/login_password_placeholder" />

    <Button
        android:id="@+id/login_sign_in_button"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_value"
        android:text="@string/login_signin_button_text" />

</RelativeLayout>
